@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.15 to 3.16
+* ported quota_nld to libnl-1.1 (Jan Kara)
 * let setquota batch mode accept comments and blank lines, add -c option (Jacky Bruno, Jan Kara)
 * print more verbose list of compile options when --version specified (Jan Kara)
 * quotaon(8) should work only on local filesystems (Ladislav Michnovic)
